tunneling-outbound-traffic/samples/https-proxy/gateway/tls-passthrough/originate-tls.yaml
# This destination rule cannot be applied for a gateway working in TLS PASSTHROUGH mode.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls
spec:
  host: external-forward-proxy.corp.net
  trafficPolicy:
    tls:
      mode: SIMPLE
